# master_simulation

./: README.md  notes  plot navigation route.ipynb  plot.py  plot_nav_route.py  plot_pid.py  plot_pid_pose.py  plot_pose.py
ROS2-ws/: README.md
ROS2-ws/cpp_pubsub/: CMakeLists.txt  package.xml
ROS2-ws/cpp_pubsub/src/: pubsub.cpp  subscriber_member_function.cpp
ROS2-ws/remote_buddy_common/: CMakeLists.txt  bridge_mapping.yaml  package.xml
ROS2-ws/remote_buddy_common/src/: sub.cpp
gazebo/: MakeROSMap.py  binary.py  housemap1.pgm  housemap1.yaml  rail.yaml  rowfollowing1.pgm  rowfollowing1.yaml  turtle.pgm  turtle.yaml
gazebo/kladd/rowfollowing/: model.config  model.sdf
gazebo/worlds/: rowfollowing  testrail.world
pathplanner/: CMakeLists.txt  global_planner_plugin.xml  package.xml
pathplanner/launch/: testplanner.launch
pathplanner/maps/: temprail.pgm
pathplanner/src/: global_planner.cpp  global_planner.h
rb1_description/: CMakeLists.txt  package.xml
rb1_description/launch/: description.launch.xml  remote.launch
rb1_description/meshes/: back_wheel_turn.stl  camera.stl  chassis.stl  drive_wheel.stl  electronics.stl
rb1_description/urdf/: rb1_description.gazebo.xacro  rb1_description.urdf.xacro  rb1_description.urdf.xarco
robot_localization/launch/: ekf_amcl_odom.launch  ekf_double.launch
robot_localization/params/: ekf_template.yaml
robot_navigation_params/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  package.xml
robot_navigation_params/launch/: amcl.launch  move_base.launch  navigation.launch
robot_navigation_params/map/: config.rviz  config2.rviz  config_pose.rviz  map.yaml
simulation_code/: CMakeLists.txt  package.xml
simulation_code/include/simulation_code/: coll_avoid.h  environment.h  exp_drive_straight.h  exp_rows_and_sections.h  localize copy.h  localize.h  odom_switch.h  rotate.h  rows_and_sections.h  sensors.h  simudrive.h  simudrive_split.h
simulation_code/include/simulation_code/functions/: feedback.cpp  feedback.h  publishers.cpp  publishers.h  subscribers.cpp  subscribers.h
simulation_code/include/simulation_test/: simudrive.h
simulation_code/launch/: exp_launch.launch  exp_launch_sim.launch  mapping_default.launch  minilaunch.launch  multilaunch.launch  sensor_filter.launch  simulation.launch  slam.launch  slam_gmapping.launch  superlaunch.launch
simulation_code/msg/: Localization.msg
simulation_code/src/: coll_avoid.cpp  environment.cpp  exp_drive_straight.cpp  exp_environment.cpp  exp_exit_enter_turn.cpp  exp_test.cpp  exp_u_turn.cpp  exp_u_turn_v0.cpp  localize copy.cpp  localize.cpp  odom_from_encoder.cpp  odom_switch.cpp  odom_switch_copy.cpp  rotate.cpp  sensors.cpp  simudrive copy 2.cpp  simudrive.cpp  simudrive_2point.cpp  simudrive_feedback copy.cpp  simudrive_feedback.cpp  simudrive_feedback_org.cpp  simudrive_feedback_split.cpp  simudrive_goal.cpp  test.py
simulation_test/: CMakeLists.txt
simulation_test/include/simulation_test/: simudrive.h
simulation_test/src/: simudrive copy.cpp  simudrive_2point.cpp  simudrive_goal.cpp
turtlebot3_description/urdf/: turtlebot3_burger.gazebo copy.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf copy.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_waffle.gazebo.xacro
turtlebot3_navigation/: package.xml
turtlebot3_navigation/launch/: amcl.launch  turtlebot3_navigation.launch
turtlebot3_navigation/maps/: rail.pgm  rail.yaml  temprail.yaml
turtlebot3_navigation/rviz/: turtlebot3_navigation.rviz
turtlebot3_sim/: README.md
turtlebot3_sim/turtlebot3_gazebo/launch/: gasstation.launch  rowfollowing.launch  testrail.launch  testrail2.launch
turtlebot3_sim/turtlebot3_gazebo/src/: turtlebot3_drive.cpp
turtlebot3_sim/turtlebot3_gazebo/worlds/: testrail2.world  testrail2_.world
turtlebot3_simulations/turtlebot3_gazebo/launch/: house2.launch  rail.launch  rail_coll.launch  robot.launch  robots.launch  rowfollowing_small.launch  testworld.launch
turtlebot3_simulations/turtlebot3_gazebo/src/: turtlebot3_drive.cpp
turtlebot3_simulations/turtlebot3_gazebo/worlds/: house2.world  rowfollowing_small.world  testrail.world  testrail_long.world  testworld.world
